src/test/deca/context/invalid/ifelse_wrong_argument_02.deca
// Description:
//     ifelse avec une condition qui n'est pas un boolean.
//
// Resultats:
//    Ligne 12: Condition argument of if/elseif should be a boolean
//
// Historique:
//    cree le 01/01/2023

{
   if(true){}
   else if(4){}
}
